Overflowing images fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -109,17 +109,12 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: white; }
+  background-color: white;
+  min-width: 0; }
 
 @media (max-width: 900px) {
   #chat-window {
     max-width: calc(100vw - 5px); } }
-
-#groups-list {
-  width: 33%;
-  min-width: 200px;
-  display: flex;
-  flex-direction: column; }
 
 /* End Chat window*/
 .message-scroll {
@@ -138,6 +133,9 @@ main {
   padding: 15px;
   margin-bottom: 5px;
   word-break: break-word; }
+
+.message, .message img {
+  max-width: 100%; }
 
 .message.other-user {
   align-self: flex-start; }
@@ -274,7 +272,10 @@ input[name="message"] {
 /* End error modal */
 /* Groups list specific */
 #groups-list {
-  background-color: white; }
+  background-color: white;
+  min-width: 0;
+  display: flex;
+  flex-direction: column; }
   #groups-list .mobile-toggler {
     display: none; }
 
